--- a/resources/sass/core/_layout.scss
+++ b/resources/sass/core/_layout.scss
@@ -317,7 +317,7 @@ app-root {
     transition: left $layout-transition-speed, right $layout-transition-speed, width $layout-transition-speed;
     position: fixed;
     width: 100%;
-    z-index: 1020;
+    z-index: 1;
     margin-bottom: 0;
 }
 
